# LMSociety

./: .gitignore  README.md  lmsociety.py  main.py  notes.txt  pyproject.toml  setup_cli.py
cli/: main.py
frontend/: package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx
src/agents/: llm_call.py  models.py
src/cli/: cli_shell.py
src/cli_app/: cli_shell.py  main.py
src/society/: lmsociety.py
