[project]
name = "rizzler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-google-genai>=4.1.2",
    "langchain-huggingface>=1.2.0",
    "langchain-openai>=1.1.6",
    "python-dotenv>=1.2.1",
    "ruff>=0.14.10",
]
